--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "catan",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "devDependencies": {
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
+  },
+  "private": true,
   "scripts": {
     "dev": "bunx --bun vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
-  }
+  "type": "module"
 }
