--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "catan",
   "version": "0.0.0",
   "devDependencies": {
+    "@biomejs/biome": "1.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   },
   "private": true,
   "scripts": {
     "dev": "bunx --bun vite",
+    "test": "jest",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
